--- a/html/carousel.html
+++ b/html/carousel.html
@@ -17,9 +17,7 @@
     <img src="../images/f5.jpg" style="display: none;">
     <img src="../images/f6.jpg" style="display: none;">
     <img src="../images/f7.jpg" style="display: none;">
-    <img src="../images/f8.jpg" style="display: none;">
-    <img src="../images/f9.jpg" style="display: none;">
 
-    <script>$('img').slideshowify();</script><div id="slideshowify-1740604197893" style="position: absolute; overflow: hidden; z-index: -2; left: 0px; top: 0px; width: 100%; height: 100%;"></div>
+    <script>$('img').slideshowify();</script>
 
 </body></html>
