--- a/index.html
+++ b/index.html
@@ -16,18 +16,20 @@
         <div class="subtitulo">INVITACIÓN A NUESTRA BODA</div><br><br><br>
 
         <div class="stamp">
-            <img src="images/world.gif" alt="The  World is Yours" class="image">
+            <img src="images/world.gif" alt="" class="image">
+            <img src="images/contorno.png" alt="" class="image2">
+            <img src="images/contorno2.png" alt="" class="image3">
             <div class="text">F & M</div>
             <div class="text2">
-                <img src="images/plane.png" width="45%" alt="Haz clic para reproducir" style="cursor: pointer;" onclick="reproducirAudio()">
+                <img src="images/plane.png" alt="Haz clic para reproducir" style="cursor: pointer;" onclick="reproducirAudio()">
                 <audio id="audio" src="html/Congratulations.mp3"></audio>
             </div>
         </div><br>
-        <h2>Fátima & Moisés</h2>
-        <h3>05.12.2025</h3>
-        <div class="cta">
-            <p>Presiona el avión para escuchar nuestra canción</p>
+        <h2>FÁTIMA & MOISÉS</h2>
+        <div class="">
+            <p style="text-transform: uppercase;">Presiona el avión para escuchar nuestra canción</p>
         </div>
+        <div class="icon"><img src="images/carta.png" width="10%" alt=""></div>
     </div>
 
     <!--Carousel-->
@@ -39,25 +41,34 @@
     <!--Padres-->
     <div class="container" data-aos="fade up">
         <br><br>
-        <img src="images/f11.png" width="20%" height="20%" alt="">
-        <h3>Con la bendición de Dios y de nuestros Padres</h3>            
-        <h3>Padres de la Novia</h3>
-        <p>Francisca Rangel Vázquez</p>
+        <div class="blessing">CON LA BENDICIÓN DE DIOS Y DE NUESTROS PADRES</div>
+        <div class="title">PADRES DE LA NOVIA</div>
+        <div class="image-container">
+            <img src="images/bride2.jpg" alt="Icono de padres">
+        </div>
+        <div class="names">
+            <p>Francisca Rangel Vázquez</p>
+        </div>
 
-        <h3>Padres del Novio</h3>
-        <p>Estela León Castañeda</p>
-        <p>José Luis Santos Rangel</p>
-            
-        <img src="images/f8.jpeg" width="100%" height="100%" alt="">
+        <div class="title">PADRES DEL NOVIO</div>
+        <div class="image-container">
+            <img src="images/groom2.jpg" alt="Icono de padres">
+        </div>
+        <div class="names">
+            <p>Estela León Castaeda</p>
+            <p>José Luis Santos Rangel</p>
+        </div>
+
+        <img src="images/f8.jpeg" width="100%" alt="">
     </div>
 
     <!--Conteo-->
     <div class="container" data-aos="fade up">
         <br><br>
-        <h2>Prepárate y acompañanos a celebrar</h2><br>
-        <img src="images/pase.png" width="100%"><br><br>
+        <h2 style="color: #654720;">Prepárate y acompañanos a celebrar</h2><br>
+        <img src="images/pase.png" width="80%"><br><br>
 
-        <p>Cuenta regresiva para el embarque</p>
+        <p>Cuenta regresiva para el abordaje</p>
         <div id="contador" class="contador">00 : 00 : 00 : 00</div>
         <div>
             <span class="unidad">DÍAS</span>
@@ -71,7 +82,7 @@
     <div class="container" data-aos="fade up">
         <h1>Itinerario de escalas</h1>
         <div class="evento">
-            <div class="icono"></div>
+            <div class="icono"><img src="images/ubicacion.png" width="10%" alt=""></div>
             <div class="titulo">Escala</div>
             <div class="detalle">
                 <p><strong>Hora: 1:00 pm</strong></p>
@@ -85,7 +96,7 @@
         </div>
 
         <div class="evento" data-aos="fade up">
-            <div class="icono"></div>
+            <div class="icono"><img src="images/ubicacion.png" width="10%" alt=""></div>
             <div class="titulo">Destino</div>
             <div class="detalle">
                 <p><strong>Hora: 6:00 pm</strong></p>
@@ -105,12 +116,12 @@
         
         <div class="dress-code">
             <div class="section">
-                <h2>MUJERES</h2>
+                <h2 class="title">MUJERES</h2>
                 <p>Vestido</p>
                 <p>Colores de verano entero o floreado (NO colores blancos,beige, rojo o similares)</p>
             </div>
             <div class="section">
-                <h2>HOMBRES</h2>
+                <h2 class="title">HOMBRES</h2>
                 <p>Formal</p>
                 <p>Pantalon de vestir & camisa</p>
             </div>
@@ -140,8 +151,7 @@
         <div class="footer-text">
             Cada invitado ha sido considerado con cariño, por lo que cada invitación es personal y válida únicamente para el número de pases asignado. <br>
             Agradecemos su comprensión y el respeto a esta indicación.
-        </div>
-        <br><br>
+        </div><br><br>
     </div>
 
     <div class="container2" data-aos="fade-up">
