--- a/index.html
+++ b/index.html
@@ -19,12 +19,12 @@
             <img src="images/world.gif" alt="" class="image">
             <img src="images/contorno.png" alt="" class="image2">
             <img src="images/contorno2.png" alt="" class="image3">
-            <div class="text">F & M</div>
+            <div class="text">✧ F & M ✧</div>
             <div class="text2">
                 <img src="images/plane.png" alt="Haz clic para reproducir" style="cursor: pointer;" onclick="reproducirAudio()">
                 <audio id="audio" src="html/Congratulations.mp3"></audio>
             </div>
-        </div><br>
+        </div><br><br><br>
         <h2>FÁTIMA & MOISÉS</h2>
         <div class="">
             <p style="text-transform: uppercase;">Presiona el avión para escuchar nuestra canción</p>
