--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <!--Portada-->
     <div class="container">
         <br><br><br><div class="titulo">PASAPORTE</div>
-        <div class="subtitulo">INVITACIÓN A NUESTRA BODA</div><br><br><br>
+        <div class="subtitulo">INVITACIÓN A NUESTRA BODA</div><br><br>
 
         <div class="stamp">
             <img src="images/world.gif" alt="" class="image">
@@ -24,7 +24,7 @@
                 <img src="images/plane.png" alt="Haz clic para reproducir" style="cursor: pointer;" onclick="reproducirAudio()">
                 <audio id="audio" src="html/Congratulations.mp3"></audio>
             </div>
-        </div><br><br><br>
+        </div><br><br><br><br>
         <h2>FÁTIMA & MOISÉS</h2>
         <div class="">
             <p style="text-transform: uppercase;">Presiona el avión para escuchar nuestra canción</p>
