--- a/index.html
+++ b/index.html
@@ -24,12 +24,12 @@
                 <img src="images/plane.png" alt="Haz clic para reproducir" style="cursor: pointer;" onclick="reproducirAudio()">
                 <audio id="audio" src="html/Congratulations.mp3"></audio>
             </div>
-        </div><br><br><br><br>
+        </div><br><br><br>
         <h1>FÁTIMA & MOISÉS</h1>
         <div class="">
             <p style="text-transform: uppercase;">Presiona el avión para escuchar nuestra canción</p>
         </div>
-        <div class="icon"><img src="images/carta.png" width="10%" alt=""></div>
+        <div class="icon"><img src="images/carta.png" width="10%" alt=""></div><br>
     </div>
 
     <!--Carousel-->
