--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.2/css/all.min.css" integrity="sha512-Evv84Mr4kqVGRNSgIGL/F/aIDqQb7xQ2vcrdIwxfjThSH8CSR7PBEakCr51Ck+w+/U6swU2Im1vVX0SVk9ABhg==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.5/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-SgOJa3DmI69IUzQ2PVdRZhwQ+dy64/BUtbMJw1MZ8t5HZApcHrRKUc4W0kG879m7" crossorigin="anonymous">
     <link rel="stylesheet" href="css/estilos.css">
     <link rel="stylesheet" href="css/carousel.css">
     <link rel="stylesheet" href="css/padres.css">
@@ -12,6 +13,7 @@
     <link rel="stylesheet" href="css/escalas.css">
     <link rel="stylesheet" href="css/vestimenta.css">
     <link rel="stylesheet" href="css/mesa.css">
+    <link rel="stylesheet" href="css/save.css">
     <title>Pasaporte de Invitación</title>
 
 </head>
@@ -54,7 +56,7 @@
             <img src="images/flores.png" alt="Imagen Superpuesta" class="imagen-superpuesta">
         </div>
         <div class="names" data-aos="fade-up">
-            <p>Francisca Rangel Vázquez</p>
+            <p>FRANCISCA RANGEL VÁZQUEZ</p>
         </div>
 
         <div class="texto" data-aos="fade-up">PADRES DEL NOVIO</div>
@@ -63,8 +65,8 @@
             <img src="images/flores.png" alt="Imagen Superpuesta" class="imagen-superpuesta">
         </div>
         <div class="names" data-aos="fade-up">
-            <p>Estela León Castañeda</p>
-            <p>José Luis Santos Rangel</p>
+            <p>ESTELA LEON CASTAÑEDA</p>
+            <p>JOSÉ LUIS SANTOS RANGEL</p>
         </div><br>
 
         <div class="texto">
@@ -166,6 +168,23 @@
         </div><br><br>
     </div>
 
+    <!--Save-->
+    <div class="container">
+        <br><br><br><div class="titulo">¡NOS CASAMOS!</div>
+        <div class="texto">Y QUEREMOS QUE SEAS PARTE DE ESTE VIAJE</div><br><br>
+
+        <div class="stamp2">
+            <img src="images/save.png" class="image4">
+        </div><br><br>
+        <h1>¡CHECK IN!</h1>
+        <div>
+            <p class="texto">CONFIRMA TU ASISTENCIA Y BIENVENIDO A BORDO</p>
+            <a type="button" class="mapa-btn" data-toggle="modal" data-target="#rsvpModal">
+                Confirmar
+            </a>
+        </div><br>
+    </div>
+
     <div class="container2" data-aos="fade-up">
         <iframe src="html/carousel.html" frameborder="0" width="100%" height="400px"></iframe>
         <div class="textoImagen2" data-aos="fade-up">¡Te esperamos!</div>
@@ -197,6 +216,7 @@
         setInterval(actualizarContador, 1000);
         actualizarContador();
     </script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.5/dist/js/bootstrap.bundle.min.js" integrity="sha384-k6d4wzSIapyDyv1kpU366/PK5hCdSbCRGRCMv+eplOQJWyd1fbcAu9OCUj5zNLiq" crossorigin="anonymous"></script>
     <script src="js/functions.js"></script>
     <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
     <script>
