--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
     <!--Portada-->
     <div class="container">
         <br><br><br><div class="titulo">PASAPORTE</div>
-        <div class="subtitulo">INVITACIÓN A NUESTRA BODA</div><br><br><br>
+        <div class="textosub">INVITACIÓN A NUESTRA BODA</div><br><br>
 
         <div class="stamp">
             <img src="images/world.gif" alt="" class="image">
