--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 <body>
     <!--Portada-->
     <div class="container">
-        <br><br><br><div class="titulo">PASAPORTE</div>
+        <br><br><div class="titulo">PASAPORTE</div>
         <div class="subtitulo">INVITACIÓN A NUESTRA BODA</div><br><br>
 
         <div class="stamp">
