--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
     <div class="container">
         <br><br><br>
         <div class="titulo">PASAPORTE</div>
-        <div class="subtitulo">A NUESTRA BODA</div><br><br><br>
+        <div class="subtitulo">A NUESTRA BODA</div><br><br>
 
         <div class="stamp">
             <img src="images/world.gif" alt="" class="image">
