--- a/index.html
+++ b/index.html
@@ -209,7 +209,7 @@
                         <option value="sí">Si</option>
                         <option value="no">No</option>
                     </select><br>
-                    <a class="mapa-btn" type="submit">Confirmar</a>
+                    <button class="mapa-btn" type="submit">Confirmar</button>
                 </form>
             </div>
         </div>
