--- a/html/carousel.html
+++ b/html/carousel.html
@@ -18,6 +18,11 @@
     <img src="../images/f6.jpg" style="display: none;">
     <img src="../images/f7.jpg" style="display: none;">
 
-    <script>$('img').slideshowify();</script>
+    <script>
+        $('img').slideshowify({
+            transitionSpeed: 3000,
+            delay: 5000           
+        });
+    </script>
 
 </body></html>
