--- a/index.html
+++ b/index.html
@@ -186,7 +186,7 @@
             <p class="texto">CONFIRMA TU ASISTENCIA Y BIENVENIDO A BORDO</p>
         </div>
         <input type="checkbox" id="modal-toggle">
-        <label for="modal-toggle" class="mapa-btn" data-aos="fade-up">Confirmar</label>
+        <label for="modal-toggle" class="mapa-btn">Confirmar</label>
     
         <div class="modal">
             <div class="modal-content">
@@ -206,6 +206,8 @@
                             <option value="no">No</option>
                         </select><br>
                         <button class="mapa-btn" type="submit">Confirmar</button>
+                        <input type="hidden" name="_captcha" value="false">
+                        <input type="hidden" name="_next" value="">
                     </form>
                 </div>
             </div>
