--- a/index.html
+++ b/index.html
@@ -193,7 +193,7 @@
                 <label for="modal-toggle" class="close">&times;</label>
                 <div class="rsvp-container">
                     <h3 class="texto">Confirma tu asistencia</h3>
-                    <form id="envio" action="https://formsubmit.co/santos_rg4l@hotmail.com" method="POST">
+                    <form id="envio" action="https://formsubmit.co/santos_rg4l@hotmail.com" method="POST" target="hiddenFrame" onsubmit="return enviarFormulario();">
                         <input class="mod form-control" type="text" name="Nombre" placeholder="Nombre" required/><br>
                         <select class="mod form-control" name="Asistencia" required>
                             <option value="">¿Asistirás?</option>
@@ -214,26 +214,16 @@
         </div>
     </div>
 
+    <iframe name="hiddenFrame" style="display:none;"></iframe>
+
     <div class="container2" data-aos="fade-up">
         <br>
         <iframe src="html/carousel.html" frameborder="0" width="100%" height="400px"></iframe>
         <div class="textoImagen2" data-aos="fade-up">¡Te esperamos!</div>
     </div>
 
-    <div id="popup-gracias" style="
-    display: none;
-    position: fixed;
-    top: 30%;
-    left: 50%;
-    transform: translate(-50%, -50%);
-    background: white;
-    border-radius: 10px;
-    padding: 30px;
-    box-shadow: 0 4px 10px rgba(0,0,0,0.3);
-    z-index: 9999;
-    text-align: center;
-    ">
-    <h3>¡Gracias por confirmar tu asistencia!</h3>
+    <div id="popup-gracias" style="display: none;position: fixed;top: 30%;left: 50%;transform: translate(-50%, -50%);background: white;border-radius: 10px;padding: 30px;box-shadow: 0 4px 10px rgba(0,0,0,0.3);z-index: 9999;text-align: center;">
+        <h3>¡Gracias por confirmar tu asistencia!</h3>
     </div>
 
     <script>
