--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
             <img src="images/flores.png" alt="Imagen Superpuesta" class="imagen-superpuesta">
         </div>
         <div class="names" data-aos="fade-up">
-            <p>ESTELA LEON CASTAÑEDA</p>
+            <p>ESTELA LEÓN CASTAÑEDA</p>
             <p>JOSÉ LUIS SANTOS RANGEL</p>
         </div><br>
 
@@ -211,13 +211,12 @@
                     </form>
                 </div>
             </div>
-        </div>
+        </div><br><br>
     </div>
 
     <iframe name="hiddenFrame" style="display:none;"></iframe>
 
     <div class="container2" data-aos="fade-up">
-        <br>
         <iframe src="html/carousel.html" frameborder="0" width="100%" height="400px"></iframe>
         <div class="textoImagen2" data-aos="fade-up">¡Te esperamos!</div>
     </div>
