--- a/index.html
+++ b/index.html
@@ -193,7 +193,7 @@
                 <label for="modal-toggle" class="close">&times;</label>
                 <div class="rsvp-container">
                     <h3 class="texto">Confirma tu asistencia</h3>
-                    <form id="envio" action="https://formsubmit.co/santos_rg4l@hotmail.com" method="POST" target="hiddenFrame" onsubmit="return enviarFormulario();">
+                    <form id="envio" action="https://formsubmit.co/fattima.rangel07@gmail.com" method="POST" target="hiddenFrame" onsubmit="return enviarFormulario();">
                         <input class="mod form-control" type="text" name="Nombre" placeholder="Nombre" required/><br>
                         <select class="mod form-control" name="Asistencia" required>
                             <option value="">¿Asistirás?</option>
