--- a/index.html
+++ b/index.html
@@ -38,8 +38,8 @@
                 <audio id="audio" src="html/Congratulations.mp3"></audio>
             </div>
         </div><br><br><br>
-        <h1>FÁTIMA & MOISÉS</h1>
         <div class="texto">
+            <h1>FÁTIMA & MOISÉS</h1>
             <p style="text-transform: uppercase;">Presiona el avión para escuchar nuestra canción</p>
         </div>
         <div class="icon"><img src="images/carta.png" width="10%" alt=""></div><br>
@@ -62,6 +62,7 @@
         </div>
         <div class="names" data-aos="fade-up">
             <p>FRANCISCA RANGEL VÁZQUEZ</p>
+            <p>JOSÉ LUIS TORRES MARTÍNEZ</p>
         </div>
 
         <div class="textoalt" data-aos="fade-up">PADRES DEL NOVIO</div>
