--- a/index.html
+++ b/index.html
@@ -28,15 +28,11 @@
         <div class="subtitulo">A NUESTRA BODA</div><br><br><br>
 
         <div class="stamp">
-            <img src="images/world.gif" alt="" class="image">
-            <img src="images/contorno.png" alt="" class="image2">
-            <img src="images/contorno2.png" alt="" class="image3">
-            <div class="central">✧ F & M ✧</div>
-            <div class="plane">
-                <img src="images/plane.png" alt="Haz clic para reproducir" style="cursor: pointer;"
-                    onclick="reproducirAudio()">
-                <audio id="audio" src="html/Congratulations.mp3"></audio>
-            </div>
+            <img src="images/1.png" alt="Haz clic para reproducir" class="image"
+                onclick="reproducirAudio()">
+            <audio id="audio" src="html/Congratulations.mp3"></audio>
+            <img src="images/world.gif" alt="" class="image2">
+
         </div><br><br><br>
         <div class="texto">
             <h1>FÁTIMA & MOISÉS</h1>
