--- a/index.html
+++ b/index.html
@@ -23,16 +23,15 @@
 <body>
     <!--Portada-->
     <div class="container">
+        <div class="espacio"></div>
         <div class="titulo">PASAPORTE</div>
-        <div class="subtitulo">A NUESTRA BODA</div><br><br><br>
+        <div class="subtitulo">A NUESTRA BODA</div>
+        <div class="espacio2"></div>
 
-        <div class="stamp">
-            <img src="images/1.png" alt="Haz clic para reproducir" class="image"
-                onclick="reproducirAudio()">
-            <audio id="audio" src="html/Congratulations.mp3"></audio>
-            <img src="images/world.gif" alt="" class="image2">
-
-        </div><br><br><br>
+        <img src="images/1.png" alt="Haz clic para reproducir" class="image" onclick="reproducirAudio()">
+        <audio id="audio" src="html/Congratulations.mp3"></audio>
+        <img src="images/world.gif" alt="" class="image2">
+        
         <div class="texto">
             <h1>FÁTIMA & MOISÉS</h1>
             <p style="text-transform: uppercase;">Presiona el avión para escuchar nuestra canción</p>
