--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
 
         <img src="images/1.png" alt="Haz clic para reproducir" class="image" onclick="reproducirAudio()">
         <audio id="audio" src="html/Congratulations.mp3"></audio>
-        <img src="images/world.gif" alt="" class="image2">
+        <img src="images/world.gif" alt="" class="image2" onclick="reproducirAudio()">
         
         <div class="texto">
             <h1>FÁTIMA & MOISÉS</h1>
