--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
         
         <div class="texto">
             <h1>FÁTIMA & MOISÉS</h1>
-            <p class="textoalt">Presiona el avión para escuchar nuestra canción</p>
+            <p class="texto">Presiona el avión para escuchar nuestra canción</p>
         </div>
         <div class="icon"><img src="images/carta.png" width="10%" alt=""></div><br>
     </div>
@@ -148,7 +148,7 @@
     <div class="container" data-aos="fade up">
         <div class="espacio"></div>
         <div class="subtitulo" data-aos="fade-up">SUGERENCIA DE REGALOS</div><br>
-        <div class="texto" data-aos="fade-up">Si deseas darnos un presente, tenemos una lista de regalos</div><br><br>
+        <div class="textoalt" data-aos="fade-up">Si deseas darnos un presente, tenemos una lista de regalos</div><br><br>
 
         <div>
             <img src="images/liverpool.png" alt="Liverpool" width="170px" data-aos="fade-up">
@@ -175,14 +175,14 @@
     <div class="container" data-aos="fade-up">
         <div class="espacio"></div>
         <div class="titulo" data-aos="fade-up">¡NOS CASAMOS!</div>
-        <div class="textoalt" data-aos="fade-up">Y QUEREMOS QUE SEAS PARTE DE ESTE VIAJE</div><br><br>
+        <div class="texto" data-aos="fade-up">Y QUEREMOS QUE SEAS PARTE DE ESTE VIAJE</div><br><br>
         <div class="espacio3"></div>
 
         <img src="images/save.png" class="image3">
 
         <h1 data-aos="fade-up">¡CHECK IN!</h1>
         <div data-aos="fade-up">
-            <p class="textoalt">CONFIRMA TU ASISTENCIA Y BIENVENIDO A BORDO</p>
+            <p class="texto">CONFIRMA TU ASISTENCIA Y BIENVENIDO A BORDO</p>
         </div>
 
         <input type="checkbox" id="modal-toggle">
