--- a/index.html
+++ b/index.html
@@ -16,7 +16,8 @@
     <link rel="stylesheet" href="css/mesa.css">
     <link rel="stylesheet" href="css/save.css">
     <link rel="stylesheet" href="css/modal.css">
-    <title>Pasaporte de Invitación</title>
+    <title>Fátima & Moisés</title>
+    <link rel="shortcut icon" href="images/rings.png" />
 
 </head>
 
