--- a/index.html
+++ b/index.html
@@ -132,13 +132,13 @@
             <div class="section" data-aos="fade-up">
                 <h2 class="subtitulo3" data-aos="fade-up">MUJERES</h2>
                 <p class="texto" data-aos="fade-up">Vestido</p>
-                <p class="textoalt2" data-aos="fade-up">Colores de verano entero o floreado. "NO colores blanco, perla, beige, azul
+                <p style="font-style:bold" class="textoalt2" data-aos="fade-up">Colores de verano entero o floreado. "NO colores blanco, perla, beige, azul
                     o similares"</p>
             </div>
             <div class="section" data-aos="fade-up">
                 <h2 class="subtitulo3" data-aos="fade-up">HOMBRES</h2>
                 <p class="texto" data-aos="fade-up">Formal</p>
-                <p class="textoalt2" data-aos="fade-up">Pantalon de vestir & camisa. "NO colores beige, blanco, perla o similares"</p>
+                <p style="font-style:bold" class="textoalt2" data-aos="fade-up">Pantalon de vestir & camisa. "NO colores beige, blanco, perla o similares"</p>
             </div>
         </div>
         <img src="images/dreescode.jpg" width="270px" data-aos="fade-up">
